[gd_scene load_steps=6 format=3 uid="uid://erh43u3h4spq"]

[ext_resource type="Script" uid="uid://460vrdw7snij" path="res://prelude_slides.gd" id="1_b2q54"]
[ext_resource type="Texture2D" uid="uid://dfo8uf3xa1uqm" path="res://slides/slide 1.png" id="2_3yhuj"]
[ext_resource type="FontFile" uid="uid://bju4ufvojatfb" path="res://Rdis.ttf" id="2_6v314"]
[ext_resource type="Texture2D" uid="uid://icmhoorka2kf" path="res://slides/slide 2.png" id="3_6v314"]
[ext_resource type="Texture2D" uid="uid://3layblh8wihb" path="res://slides/slide 3.png" id="4_opcxx"]

[node name="main" type="Node2D"]
script = ExtResource("1_b2q54")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color(0.685146, 0.685146, 0.685146, 1)
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -750.0
offset_top = 302.12
offset_right = -450.0
offset_bottom = 342.12
grow_horizontal = 2
scale = Vector2(5, 5)
theme_override_fonts/normal_font = ExtResource("2_6v314")
bbcode_enabled = true
text = "[center]Press [color=red]D[/color] to continue"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Slide1" type="Sprite2D" parent="."]
texture = ExtResource("2_3yhuj")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
offset_left = -1000.0
offset_top = -1000.0
offset_right = 1000.0
offset_bottom = 1000.0
color = Color(0, 0, 0, 1)

[node name="Slide2" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_6v314")

[node name="Slide3" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_opcxx")
